# svakenett

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
claudedocs/: CLEANUP_REPORT_2025-11-23.md  COMPLETION_STATUS.md  DAY4_5_POSTAL_CODES_COMPLETE.md  FORMAT_DECISION.md  NVE_EMAIL_DRAFT.md  optimization_report_v4.md  optimization_summary_2025-11-24.md
claudedocs/archive/: DAY1_DATA_LOAD_COMPLETE.md  DAY2_3_KILE_DATA_COMPLETE.md  DAY6_GRID_COVERAGE_GAP_ANALYSIS.md  DOCUMENTATION_UPDATE_2025-11-24.md  DOCUMENTATION_UPDATE_V4_COMPLETION_REPORT.md  DOCUMENTATION_UPDATE_V4_REPORT.md  DOCUMENTATION_UPDATE_V4_SUMMARY.md  IMPLEMENTATION_STATUS.md  KILE_REMOVAL_SUMMARY.md  chatgpt_review_prompt.md  overnight_2025-11-24_progress.md
claudedocs/reports/: OVERNIGHT_SESSION_2025-11-23.md
data/kile/: grunnlagsdata_ir_2024.xlsx  grunnlagsdata_ir_2025.xlsx
docs/: APPROACH_COMPARISON.md  DATABASE_SCHEMA.md  DATABASE_SCHEMA.sql  DELIVERABLES_SUMMARY.md  DEVELOPER_GUIDE.md  GRID_INFRASTRUCTURE_SCORING_README.md  IMPLEMENTATION_PLAN.md  PROJECT_OVERVIEW.md  SCORING_ALGORITHM_DESIGN.md  VALIDATION_CHECKLIST.md
docs/analysis/: DATAMODELL_SVAKT_NETT_ANALYSE.md  analyse_svakt_nett_segment.md
docs/setup/: SETUP_INSTRUCTIONS.md  (+1 more)
sql/: 01_init_schema.sql  calculate_cabin_grid_distances.sql  calculate_weak_grid_scores.sql  calculate_weak_grid_scores_v3_realistic.sql  calculate_weak_grid_scores_v3_simplified.sql  calculate_weak_grid_scores_v3_unified.sql  nve_infrastructure_schema.sql  optimized_weak_grid_filter_v4.sql  phase5_score_weak_grid_REVISED.sql  validate_nve_load.sql  validate_score_changes.sql
(+103 files in other folders)
